--- a/config/database.yml
+++ b/config/database.yml
@@ -26,25 +26,27 @@ defaults: &defaults
   encoding: utf8
   <<: *<%= ENV['RAILS_DB'] || "sqlite" %>
 
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: sqlite3
-  database: db/test.sqlite3
+
+development:
   pool: 5
   timeout: 5000
+  encoding: utf8
+  adapter: postgresql
+  database: metatea
+  username: test
+  password: test
+  host: 127.0.0.1
+
+test:
+  pool: 5
+  timeout: 5000
+  encoding: utf8
+  adapter: postgresql
+  database: metatea_test
+  username: test
+  password: test
+  host: 127.0.0.1
 
 production:
   <<: *defaults
